GTK4/Package_Tools/include-C_5.6.9/gtk/in_Arbeit/fertig/gtkwidget.h

#define __GTK_WIDGET_H__
#define GTK_TYPE_WIDGET                   (gtk_widget_get_type ())
#define GTK_WIDGET(widget)                (G_TYPE_CHECK_INSTANCE_CAST ((widget), GTK_TYPE_WIDGET, GtkWidget))
#define GTK_WIDGET_CLASS(klass)           (G_TYPE_CHECK_CLASS_CAST ((klass), GTK_TYPE_WIDGET, GtkWidgetClass))
#define GTK_IS_WIDGET(widget)             (G_TYPE_CHECK_INSTANCE_TYPE ((widget), GTK_TYPE_WIDGET))
#define GTK_IS_WIDGET_CLASS(klass)        (G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_WIDGET))
#define GTK_WIDGET_GET_CLASS(obj)         (G_TYPE_INSTANCE_GET_CLASS ((obj), GTK_TYPE_WIDGET, GtkWidgetClass))
#define GTK_TYPE_REQUISITION              (gtk_requisition_get_type ())
typedef struct _GtkWidgetPrivate       GtkWidgetPrivate;
typedef struct _GtkWidgetClass         GtkWidgetClass;
typedef struct _GtkWidgetClassPrivate  GtkWidgetClassPrivate;
typedef         GdkRectangle       GtkAllocation;
struct _GtkWidgetClass
{
  GInitiallyUnownedClass parent_class;
  void (* show)                (GtkWidget        *widget);
  void (* hide)                (GtkWidget        *widget);
  void (* map)                 (GtkWidget        *widget);
  void (* unmap)               (GtkWidget        *widget);
  void (* realize)             (GtkWidget        *widget);
  void (* unrealize)           (GtkWidget        *widget);
  void (* root)                (GtkWidget        *widget);
  void (* unroot)              (GtkWidget        *widget);
  void (* size_allocate)       (GtkWidget           *widget,
                                int                  width,
                                int                  height,
                                int                  baseline);
  void (* state_flags_changed) (GtkWidget        *widget,
                                GtkStateFlags     previous_state_flags);
  void (* direction_changed)   (GtkWidget        *widget,
                                GtkTextDirection  previous_direction);
  GtkSizeRequestMode (* get_request_mode)               (GtkWidget      *widget);
  void              (* measure) (GtkWidget      *widget,
                                 GtkOrientation  orientation,
                                 int             for_size,
                                 int            *minimum,
                                 int            *natural,
                                 int            *minimum_baseline,
                                 int            *natural_baseline);
  gboolean (* mnemonic_activate)        (GtkWidget           *widget,
                                         gboolean             group_cycling);
  gboolean (* grab_focus)               (GtkWidget           *widget);
  gboolean (* focus)                    (GtkWidget           *widget,
                                         GtkDirectionType     direction);
  void     (* set_focus_child)          (GtkWidget           *widget,
                                         GtkWidget           *child);
  void     (* move_focus)               (GtkWidget           *widget,
                                         GtkDirectionType     direction);
  gboolean (* keynav_failed)            (GtkWidget           *widget,
                                         GtkDirectionType     direction);
  gboolean     (* query_tooltip)      (GtkWidget  *widget,
                                       int         x,
                                       int         y,
                                       gboolean    keyboard_tooltip,
                                       GtkTooltip *tooltip);
  void         (* compute_expand)     (GtkWidget  *widget,
                                       gboolean   *hexpand_p,
                                       gboolean   *vexpand_p);
  void         (* css_changed)                 (GtkWidget            *widget,
                                                GtkCssStyleChange    *change);
  void         (* system_setting_changed)      (GtkWidget            *widget,
                                                GtkSystemSetting      settings);
  void         (* snapshot)                    (GtkWidget            *widget,
                                                GtkSnapshot          *snapshot);
  gboolean     (* contains)                    (GtkWidget *widget,
                                                double     x,
                                                double     y);
  GtkWidgetClassPrivate *priv;
  gpointer padding[8];
};
GType      gtk_widget_get_type            (void) ;
void       gtk_widget_unparent            (GtkWidget           *widget);
void       gtk_widget_show                (GtkWidget           *widget);
void       gtk_widget_hide                (GtkWidget           *widget);
void       gtk_widget_map                 (GtkWidget           *widget);
void       gtk_widget_unmap               (GtkWidget           *widget);
void       gtk_widget_realize             (GtkWidget           *widget);
void       gtk_widget_unrealize           (GtkWidget           *widget);
void       gtk_widget_queue_draw          (GtkWidget           *widget);
void       gtk_widget_queue_resize        (GtkWidget           *widget);
void       gtk_widget_queue_allocate      (GtkWidget           *widget);
GdkFrameClock* gtk_widget_get_frame_clock (GtkWidget           *widget);
void       gtk_widget_size_allocate       (GtkWidget           *widget,
                                           const GtkAllocation *allocation,
                                           int                  baseline);
void       gtk_widget_allocate            (GtkWidget               *widget,
                                           int                      width,
                                           int                      height,
                                           int                      baseline,
                                           GskTransform            *transform);
GtkSizeRequestMode  gtk_widget_get_request_mode               (GtkWidget      *widget);
void gtk_widget_measure (GtkWidget      *widget,
                         GtkOrientation  orientation,
                         int             for_size,
                         int            *minimum,
                         int            *natural,
                         int            *minimum_baseline,
                         int            *natural_baseline);
void                gtk_widget_get_preferred_size             (GtkWidget      *widget,
                                                               GtkRequisition *minimum_size,
                                                               GtkRequisition *natural_size);
void                    gtk_widget_set_layout_manager   (GtkWidget        *widget,
                                                         GtkLayoutManager *layout_manager);
GtkLayoutManager *      gtk_widget_get_layout_manager   (GtkWidget        *widget);
void                    gtk_widget_class_set_layout_manager_type        (GtkWidgetClass *widget_class,
                                                                         GType           type);
GType                   gtk_widget_class_get_layout_manager_type        (GtkWidgetClass *widget_class);
void       gtk_widget_class_add_binding   (GtkWidgetClass      *widget_class,
                                           guint                keyval,
                                           GdkModifierType      mods,
                                           GtkShortcutFunc      callback,
                                           const char          *format_string,
                                           ...);
void       gtk_widget_class_add_binding_signal
                                          (GtkWidgetClass      *widget_class,
                                           guint                keyval,
                                           GdkModifierType      mods,
                                           const char          *signal,
                                           const char          *format_string,
                                           ...);
void       gtk_widget_class_add_binding_action
                                          (GtkWidgetClass      *widget_class,
                                           guint                keyval,
                                           GdkModifierType      mods,
                                           const char          *action_name,
                                           const char          *format_string,
                                           ...);
void       gtk_widget_class_add_shortcut  (GtkWidgetClass      *widget_class,
                                           GtkShortcut         *shortcut);
void       gtk_widget_class_set_activate_signal                 (GtkWidgetClass *widget_class,
                                                                 guint           signal_id);
void       gtk_widget_class_set_activate_signal_from_name       (GtkWidgetClass *widget_class,
                                                                 const char     *signal_name);
guint      gtk_widget_class_get_activate_signal                 (GtkWidgetClass *widget_class);
gboolean   gtk_widget_mnemonic_activate   (GtkWidget           *widget,
                                           gboolean             group_cycling);
gboolean   gtk_widget_activate               (GtkWidget        *widget);
void       gtk_widget_set_can_focus       (GtkWidget           *widget,
                                           gboolean             can_focus);
gboolean   gtk_widget_get_can_focus       (GtkWidget           *widget);
void       gtk_widget_set_focusable       (GtkWidget           *widget,
                                           gboolean             focusable);
gboolean   gtk_widget_get_focusable       (GtkWidget           *widget);
gboolean   gtk_widget_has_focus           (GtkWidget           *widget);
gboolean   gtk_widget_is_focus            (GtkWidget           *widget);
gboolean   gtk_widget_has_visible_focus   (GtkWidget           *widget);
gboolean   gtk_widget_grab_focus          (GtkWidget           *widget);
void       gtk_widget_set_focus_on_click  (GtkWidget           *widget,
                                           gboolean             focus_on_click);
gboolean   gtk_widget_get_focus_on_click  (GtkWidget           *widget);
void       gtk_widget_set_can_target      (GtkWidget           *widget,
                                           gboolean             can_target);
gboolean   gtk_widget_get_can_target      (GtkWidget           *widget);
gboolean   gtk_widget_has_default         (GtkWidget           *widget);
void      gtk_widget_set_receives_default (GtkWidget           *widget,
                                           gboolean             receives_default);
gboolean  gtk_widget_get_receives_default (GtkWidget           *widget);
void                  gtk_widget_set_name               (GtkWidget    *widget,
                                                         const char   *name);
const char *         gtk_widget_get_name               (GtkWidget    *widget);
void                  gtk_widget_set_state_flags        (GtkWidget     *widget,
                                                         GtkStateFlags  flags,
                                                         gboolean       clear);
void                  gtk_widget_unset_state_flags      (GtkWidget     *widget,
                                                         GtkStateFlags  flags);
GtkStateFlags         gtk_widget_get_state_flags        (GtkWidget     *widget);
void                  gtk_widget_set_sensitive          (GtkWidget    *widget,
                                                         gboolean      sensitive);
gboolean              gtk_widget_get_sensitive          (GtkWidget    *widget);
gboolean              gtk_widget_is_sensitive           (GtkWidget    *widget);
void                  gtk_widget_set_visible            (GtkWidget    *widget,
                                                         gboolean      visible);
gboolean              gtk_widget_get_visible            (GtkWidget    *widget);
gboolean              gtk_widget_is_visible             (GtkWidget    *widget);
gboolean              gtk_widget_is_drawable            (GtkWidget    *widget);
gboolean              gtk_widget_get_realized           (GtkWidget    *widget);
gboolean              gtk_widget_get_mapped             (GtkWidget    *widget);
void                  gtk_widget_set_parent             (GtkWidget    *widget,
                                                         GtkWidget    *parent);
GtkWidget *           gtk_widget_get_parent             (GtkWidget    *widget);
GtkRoot *             gtk_widget_get_root               (GtkWidget    *widget);
GtkNative *           gtk_widget_get_native             (GtkWidget    *widget);