GTK4-Konverter_Alpha/header/gtk/gtkwidget.pp


unit gtkwidget;
interface

{
  Automatically converted by H2Pas 1.0.0 from /n4800/DATEN/Programmierung/mit_GIT/Lazarus/Tutorial/GTK2/GTK4-Konverter/header/gtk/gtkwidget.h
  The following command line parameters were used:
    /n4800/DATEN/Programmierung/mit_GIT/Lazarus/Tutorial/GTK2/GTK4-Konverter/header/gtk/gtkwidget.h
    -p
    -T
    -S
    -d
    -c
}

    { Pointers to basic pascal types, inserted by h2pas conversion program.}
    Type
      PLongint  = ^Longint;
      PSmallInt = ^SmallInt;
      PByte     = ^Byte;
      PWord     = ^Word;
      PDWord    = ^DWord;
      PDouble   = ^Double;

    Type
    Pcairo_font_options_t  = ^cairo_font_options_t;
    Pchar  = ^char;
    Pdouble  = ^double;
    PGActionGroup  = ^GActionGroup;
    Pgboolean  = ^gboolean;
    PGBytes  = ^GBytes;
    PGdkClipboard  = ^GdkClipboard;
    PGdkCursor  = ^GdkCursor;
    PGdkDisplay  = ^GdkDisplay;
    PGdkFrameClock  = ^GdkFrameClock;
    PGList  = ^GList;
    PGListModel  = ^GListModel;
    PGObject  = ^GObject;
    PGskTransform  = ^GskTransform;
    PGtkAllocation  = ^GtkAllocation;
    PGtkBuilderScope  = ^GtkBuilderScope;
    PGtkCssStyleChange  = ^GtkCssStyleChange;
    PGtkEventController  = ^GtkEventController;
    PGtkLayoutManager  = ^GtkLayoutManager;
    PGtkNative  = ^GtkNative;
    PGtkRequisition  = ^GtkRequisition;
    PGtkRoot  = ^GtkRoot;
    PGtkSettings  = ^GtkSettings;
    PGtkShortcut  = ^GtkShortcut;
    PGtkSnapshot  = ^GtkSnapshot;
    PGtkStyleContext  = ^GtkStyleContext;
    PGtkTooltip  = ^GtkTooltip;
    PGtkWidget  = ^GtkWidget;
    PGtkWidgetClass  = ^GtkWidgetClass;
    PGtkWidgetClassPrivate  = ^GtkWidgetClassPrivate;
    PGtkWidgetPrivate  = ^GtkWidgetPrivate;
    PGType  = ^GType;
    PGVariant  = ^GVariant;
    PGVariantType  = ^GVariantType;
    Plongint  = ^longint;
    PPangoContext  = ^PangoContext;
    PPangoFontMap  = ^PangoFontMap;
    PPangoLayout  = ^PangoLayout;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}




{$ifndef __GTK_WIDGET_H__}
{$define __GTK_WIDGET_H__}
{$if !defined (__GTK_H_INSIDE__) && !defined (GTK_COMPILATION)}
{$error "Only <gtk/gtk.h> can be included directly."}
{$endif}
{$include <gdk/gdk.h>}
{$include <gsk/gsk.h>}
{$include <gtk/gtkaccelgroup.h>}
{$include <gtk/gtkborder.h>}
{$include <gtk/gtkshortcut.h>}
{$include <gtk/gtkshortcutaction.h>}
{$include <gtk/gtktypes.h>}



function GTK_TYPE_WIDGET : longint; { return type might be wrong }

function GTK_WIDGET(widget : longint) : longint;

function GTK_WIDGET_CLASS(klass : longint) : longint;

function GTK_IS_WIDGET(widget : longint) : longint;

function GTK_IS_WIDGET_CLASS(klass : longint) : longint;

function GTK_WIDGET_GET_CLASS(obj : longint) : longint;

function GTK_TYPE_REQUISITION : longint; { return type might be wrong }

type


  PGtkAllocation = ^TGtkAllocation;
  TGtkAllocation = TGdkRectangle;


  TGtkTickCallback = function (widget:PGtkWidget; frame_clock:PGdkFrameClock; user_data:Tgpointer):Tgboolean;cdecl;

  PGtkRequisition = ^TGtkRequisition;
  TGtkRequisition = record
      width : longint;cdecl;
      height : longint;
    end;



  PGtkWidget = ^TGtkWidget;
  TGtkWidget = record
      parent_instance : TGInitiallyUnowned;
      priv : PGtkWidgetPrivate;
    end;









  PGtkWidgetClass = ^TGtkWidgetClass;
  TGtkWidgetClass = record
      parent_class : TGInitiallyUnownedClass;
      show : procedure (widget:PGtkWidget);cdecl;
      hide : procedure (widget:PGtkWidget);cdecl;
      map : procedure (widget:PGtkWidget);cdecl;
      unmap : procedure (widget:PGtkWidget);cdecl;
      realize : procedure (widget:PGtkWidget);cdecl;
      unrealize : procedure (widget:PGtkWidget);cdecl;
      root : procedure (widget:PGtkWidget);cdecl;
      unroot : procedure (widget:PGtkWidget);cdecl;
      size_allocate : procedure (widget:PGtkWidget; width:longint; height:longint; baseline:longint);cdecl;
      state_flags_changed : procedure (widget:PGtkWidget; previous_state_flags:TGtkStateFlags);cdecl;
      direction_changed : procedure (widget:PGtkWidget; previous_direction:TGtkTextDirection);cdecl;
      get_request_mode : function (widget:PGtkWidget):TGtkSizeRequestMode;cdecl;
      measure : procedure (widget:PGtkWidget; orientation:TGtkOrientation; for_size:longint; minimum:Plongint; natural:Plongint; 
                    minimum_baseline:Plongint; natural_baseline:Plongint);cdecl;
      mnemonic_activate : function (widget:PGtkWidget; group_cycling:Tgboolean):Tgboolean;cdecl;
      grab_focus : function (widget:PGtkWidget):Tgboolean;cdecl;
      focus : function (widget:PGtkWidget; direction:TGtkDirectionType):Tgboolean;cdecl;
      set_focus_child : procedure (widget:PGtkWidget; child:PGtkWidget);cdecl;
      move_focus : procedure (widget:PGtkWidget; direction:TGtkDirectionType);cdecl;
      keynav_failed : function (widget:PGtkWidget; direction:TGtkDirectionType):Tgboolean;cdecl;
      query_tooltip : function (widget:PGtkWidget; x:longint; y:longint; keyboard_tooltip:Tgboolean; tooltip:PGtkTooltip):Tgboolean;cdecl;
      compute_expand : procedure (widget:PGtkWidget; hexpand_p:Pgboolean; vexpand_p:Pgboolean);cdecl;
      css_changed : procedure (widget:PGtkWidget; change:PGtkCssStyleChange);cdecl;
      system_setting_changed : procedure (widget:PGtkWidget; settings:TGtkSystemSetting);cdecl;
      snapshot : procedure (widget:PGtkWidget; snapshot:PGtkSnapshot);cdecl;
      contains : function (widget:PGtkWidget; x:Tdouble; y:Tdouble):Tgboolean;cdecl;
      priv : PGtkWidgetClassPrivate;
      padding : array[0..7] of Tgpointer;
    end;



function gtk_widget_get_type:TGType;cdecl;external;

procedure gtk_widget_unparent(widget:PGtkWidget);cdecl;external;

procedure gtk_widget_show(widget:PGtkWidget);cdecl;external;

procedure gtk_widget_hide(widget:PGtkWidget);cdecl;external;

procedure gtk_widget_map(widget:PGtkWidget);cdecl;external;

procedure gtk_widget_unmap(widget:PGtkWidget);cdecl;external;

procedure gtk_widget_realize(widget:PGtkWidget);cdecl;external;

procedure gtk_widget_unrealize(widget:PGtkWidget);cdecl;external;


procedure gtk_widget_queue_draw(widget:PGtkWidget);cdecl;external;

procedure gtk_widget_queue_resize(widget:PGtkWidget);cdecl;external;

procedure gtk_widget_queue_allocate(widget:PGtkWidget);cdecl;external;

function gtk_widget_get_frame_clock(widget:PGtkWidget):PGdkFrameClock;cdecl;external;

procedure gtk_widget_size_allocate(widget:PGtkWidget; allocation:PGtkAllocation; baseline:longint);cdecl;external;

procedure gtk_widget_allocate(widget:PGtkWidget; width:longint; height:longint; baseline:longint; transform:PGskTransform);cdecl;external;

function gtk_widget_get_request_mode(widget:PGtkWidget):TGtkSizeRequestMode;cdecl;external;

procedure gtk_widget_measure(widget:PGtkWidget; orientation:TGtkOrientation; for_size:longint; minimum:Plongint; natural:Plongint; 
            minimum_baseline:Plongint; natural_baseline:Plongint);cdecl;external;

procedure gtk_widget_get_preferred_size(widget:PGtkWidget; minimum_size:PGtkRequisition; natural_size:PGtkRequisition);cdecl;external;

procedure gtk_widget_set_layout_manager(widget:PGtkWidget; layout_manager:PGtkLayoutManager);cdecl;external;

function gtk_widget_get_layout_manager(widget:PGtkWidget):PGtkLayoutManager;cdecl;external;

procedure gtk_widget_class_set_layout_manager_type(widget_class:PGtkWidgetClass; _type:TGType);cdecl;external;

function gtk_widget_class_get_layout_manager_type(widget_class:PGtkWidgetClass):TGType;cdecl;external;

procedure gtk_widget_class_add_binding(widget_class:PGtkWidgetClass; keyval:Tguint; mods:TGdkModifierType; callback:TGtkShortcutFunc; format_string:Pchar; 
            args:array of const);cdecl;external;
procedure gtk_widget_class_add_binding(widget_class:PGtkWidgetClass; keyval:Tguint; mods:TGdkModifierType; callback:TGtkShortcutFunc; format_string:Pchar);cdecl;external;

procedure gtk_widget_class_add_binding_signal(widget_class:PGtkWidgetClass; keyval:Tguint; mods:TGdkModifierType; signal:Pchar; format_string:Pchar; 
            args:array of const);cdecl;external;
procedure gtk_widget_class_add_binding_signal(widget_class:PGtkWidgetClass; keyval:Tguint; mods:TGdkModifierType; signal:Pchar; format_string:Pchar);cdecl;external;

procedure gtk_widget_class_add_binding_action(widget_class:PGtkWidgetClass; keyval:Tguint; mods:TGdkModifierType; action_name:Pchar; format_string:Pchar; 
            args:array of const);cdecl;external;
procedure gtk_widget_class_add_binding_action(widget_class:PGtkWidgetClass; keyval:Tguint; mods:TGdkModifierType; action_name:Pchar; format_string:Pchar);cdecl;external;

procedure gtk_widget_class_add_shortcut(widget_class:PGtkWidgetClass; shortcut:PGtkShortcut);cdecl;external;

procedure gtk_widget_class_set_activate_signal(widget_class:PGtkWidgetClass; signal_id:Tguint);cdecl;external;

procedure gtk_widget_class_set_activate_signal_from_name(widget_class:PGtkWidgetClass; signal_name:Pchar);cdecl;external;

function gtk_widget_class_get_activate_signal(widget_class:PGtkWidgetClass):Tguint;cdecl;external;

function gtk_widget_mnemonic_activate(widget:PGtkWidget; group_cycling:Tgboolean):Tgboolean;cdecl;external;

function gtk_widget_activate(widget:PGtkWidget):Tgboolean;cdecl;external;

procedure gtk_widget_set_can_focus(widget:PGtkWidget; can_focus:Tgboolean);cdecl;external;

function gtk_widget_get_can_focus(widget:PGtkWidget):Tgboolean;cdecl;external;

procedure gtk_widget_set_focusable(widget:PGtkWidget; focusable:Tgboolean);cdecl;external;

function gtk_widget_get_focusable(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_has_focus(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_is_focus(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_has_visible_focus(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_grab_focus(widget:PGtkWidget):Tgboolean;cdecl;external;

procedure gtk_widget_set_focus_on_click(widget:PGtkWidget; focus_on_click:Tgboolean);cdecl;external;

function gtk_widget_get_focus_on_click(widget:PGtkWidget):Tgboolean;cdecl;external;

procedure gtk_widget_set_can_target(widget:PGtkWidget; can_target:Tgboolean);cdecl;external;

function gtk_widget_get_can_target(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_has_default(widget:PGtkWidget):Tgboolean;cdecl;external;

procedure gtk_widget_set_receives_default(widget:PGtkWidget; receives_default:Tgboolean);cdecl;external;

function gtk_widget_get_receives_default(widget:PGtkWidget):Tgboolean;cdecl;external;

procedure gtk_widget_set_name(widget:PGtkWidget; name:Pchar);cdecl;external;

function gtk_widget_get_name(widget:PGtkWidget):Pchar;cdecl;external;

procedure gtk_widget_set_state_flags(widget:PGtkWidget; flags:TGtkStateFlags; clear:Tgboolean);cdecl;external;

procedure gtk_widget_unset_state_flags(widget:PGtkWidget; flags:TGtkStateFlags);cdecl;external;

function gtk_widget_get_state_flags(widget:PGtkWidget):TGtkStateFlags;cdecl;external;

procedure gtk_widget_set_sensitive(widget:PGtkWidget; sensitive:Tgboolean);cdecl;external;

function gtk_widget_get_sensitive(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_is_sensitive(widget:PGtkWidget):Tgboolean;cdecl;external;

procedure gtk_widget_set_visible(widget:PGtkWidget; visible:Tgboolean);cdecl;external;

function gtk_widget_get_visible(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_is_visible(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_is_drawable(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_get_realized(widget:PGtkWidget):Tgboolean;cdecl;external;

function gtk_widget_get_mapped(widget:PGtkWidget):Tgboolean;cdecl;external;

procedure gtk_widget_set_parent(widget:PGtkWidget; parent:PGtkWidget);cdecl;external;

function gtk_widget_get_parent(widget:PGtkWidget):PGtkWidget;cdecl;external;

function gtk_widget_get_root(widget:PGtkWidget):PGtkRoot;cdecl;external;

function gtk_widget_get_native(widget:PGtkWidget):PGtkNative;cdecl;external;
